--- a/package.json
+++ b/package.json
@@ -6,16 +6,25 @@
   "type": "commonjs",
   "scripts": {
     "start": "node backend/server.js",
-    "server": "nodemon backend/server.js"
+    "server": "nodemon backend/server.js",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Somtochukwu Emmanuel",
   "license": "MIT",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.10.0",
     "bcryptjs": "^3.0.2",
     "colors": "^1.4.0",
+    "concurrently": "^9.2.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.2"
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.2",
+    "node": "^24.12.0",
+    "react-redux": "^9.2.0",
+    "server.js": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
